--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body {
   height: 100vh;
   margin: 0;
   padding: 0;
-  background: url(/images/intro.jpg) no-repeat center center fixed; 
+  background: url(https://imcyc.github.io/mapei/images/intro.jpg) no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
